[package]
name = "rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
bincode = "1.3.3"
clap = { version = "4.0.29", features = ["derive"] }
hex = "0.4.3"
num-bigint-dig = { version = "0.8.2", features = ["prime"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
